[package]
name = "simple-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/zcash/halo2.git", features = ["dev-graph"]}
plotters = { version = "0.3.0"}
group = "*"
pretty_assertions = "*"

[features]
dev-graph = ["halo2_proofs/dev-graph"]
